Fixed navbar background color on mobile devices.

--- a/styles/common.css
+++ b/styles/common.css
@@ -34,9 +34,20 @@ header {
 }
 
 #main-nav {
-	background-color: transparent;
+	background-color: white;
 	border-bottom-color: rgba(0, 0, 0, 0.3);
 	border-bottom-width: 2px;
+}
+
+@media (min-width:768px) {
+	#main-nav {
+		background-color: transparent;
+	}
+	
+	.navbar-default.affix-top .navbar-header .navbar-brand, 
+	.navbar-default.affix-top .navbar-nav > li > a {
+	    color: white;
+	}
 }
 
 #main-nav.affix {
@@ -44,20 +55,21 @@ header {
 	border-bottom-color: ligth-grey;
 }
 
-.navbar-default.affix .navbar-header .navbar-brand {
-	color: #36465d !important;
+.navbar-default .navbar-header .navbar-brand {
+	color: #36465d;
 }
 
-.navbar-devault .navbar-header .navbar-brand, 
+.navbar-default .navbar-toggle:focus, 
+.navbar-default .navbar-toggle {
+	background-color: white;	
+}
+
+.navbar-default .navbar-header .navbar-brand, 
 .navbar-default .navbar-nav > li > a {
     font-weight: bold;
 }
 
-.navbar-default.affix-top .navbar-header .navbar-brand, 
-.navbar-default.affix-top .navbar-nav > li > a {
-    color: white;
-}
-
+.navbar-default .navbar-collapse .navbar-nav > li > a:HOVER,
 .navbar-default.affix .navbar-header .navbar-brand:HOVER,
 .navbar-default.affix .navbar-nav > li > a:HOVER,
 .navbar-default.affix-top .navbar-header .navbar-brand:HOVER,
@@ -133,7 +145,6 @@ section {
 }
 
 .more-arrow, .more-arrow:ACTIVE {
-	margin-top: 20px;
 	color: white;
 }
 
